finitions des tests

--- a/src/01_cleaning.ipynb
+++ b/src/01_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,9 @@
     "from ydata_profiling import ProfileReport\n",
     "from scipy.stats import pearsonr, chi2_contingency\n",
     "import statsmodels.api as sm\n",
-    "from statsmodels.formula.api import ols"
+    "from statsmodels.formula.api import ols\n",
+    "import scipy.stats as ss\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -881,6 +883,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Le coefficient de corrélation de rang de Spearman mesure la corrélation entre deux variables ordinales ou continues.  \n",
+    "Il est également compris entre -1 et 1, où une valeur de -1 indique une corrélation négative parfaite,  \n",
+    "une valeur de 0 indique l'absence de corrélation et une valeur de 1 indique une corrélation positive parfaite  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient de corrélation de rang de Spearman : 0.18474274666624488\n",
+      "p-value : 4.132385749669143e-55\n",
+      "Coefficient de corrélation de rang de Spearman : -0.23205871805614775\n",
+      "p-value : 9.474863535137858e-87\n",
+      "Coefficient de corrélation de rang de Spearman : -0.3670618566861082\n",
+      "p-value : 1.404616769950862e-223\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcul du coefficient de corrélation de rang de Spearman entre Churn et MonthlyCharges\n",
+    "corr, p_value = stats.spearmanr(df['Churn'], df['MonthlyCharges'])\n",
+    "print('Coefficient de corrélation de rang de Spearman :', corr)\n",
+    "print('p-value :', p_value)\n",
+    "\n",
+    "# Calcul du coefficient de corrélation de rang de Spearman entre Churn et TotalCharges\n",
+    "corr, p_value = stats.spearmanr(df['Churn'], df['TotalCharges'])\n",
+    "print('Coefficient de corrélation de rang de Spearman :', corr)\n",
+    "print('p-value :', p_value)\n",
+    "\n",
+    "# Calcul du coefficient de corrélation de rang de Spearman entre Churn et tenure\n",
+    "corr, p_value = stats.spearmanr(df['Churn'], df['tenure'])\n",
+    "print('Coefficient de corrélation de rang de Spearman :', corr)\n",
+    "print('p-value :', p_value)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### <font color=\"yellow\"> Conclusion Tests : </font>"
    ]
   },
@@ -890,6 +937,304 @@
    "metadata": {},
    "source": [
     "- ON constate que les variables (MonthlyCharges, TotalCharges, tenure, SeniorCitizen,Partner,Dependents, MultipleLines, InternetService, OnlineSecurity, OnlineBackup , DeviceProtection , TechSupport , StreamingTV, StreamingMovies, Contract, PaperlessBilling, PaymentMethod ) ont une influence sur notre Target variable Churn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cramers_v(var1, var2):\n",
+    "    confusion_matrix = pd.crosstab(var1, var2)\n",
+    "    chi2 = ss.chi2_contingency(confusion_matrix)[0]\n",
+    "    n = confusion_matrix.sum().sum()\n",
+    "    phi2 = chi2/n\n",
+    "    r,k = confusion_matrix.shape\n",
+    "    phi2corr = max(0, phi2 - ((k-1)*(r-1))/(n-1))\n",
+    "    rcorr = r - ((r-1)**2)/(n-1)\n",
+    "    kcorr = k - ((k-1)**2)/(n-1)\n",
+    "    return np.sqrt(phi2corr / min((kcorr-1), (rcorr-1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3220367323307425"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['InternetService'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14999108255137"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['SeniorCitizen'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14966271044155077"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['Partner'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1634481432749282"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['Dependents'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03639958908232507"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['MultipleLines'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3470160668827287"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['OnlineSecurity'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.291850036724674"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['OnlineBackup'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28109492388964397"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['DeviceProtection'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3425261587493694"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['TechSupport'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22990176915403476"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['StreamingTV'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23035147282444215"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['StreamingMovies'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40979839182553446"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['Contract'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1911405817441778"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['PaperlessBilling'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3026771381187204"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cramers_v(df['Churn'], df['PaymentMethod'])"
    ]
   },
   {
