--- a/src/02_analyse.ipynb
+++ b/src/02_analyse.ipynb
@@ -424,6 +424,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### <font color=\"yellow\">! Test Pearson => H0 : l’hypothèse nulle est : « les deux variables testées sont indépendantes » ( si p-value < 5% on rejette H0)</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corrélation de Pearson entre MonthlyCharges et TotalCharges :  0.6503390196671857\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculer la corrélation de Pearson pour les variables continues (MonthlyCharges et TotalCharges)\n",
+    "pearson_corr, _ = pearsonr(df['MonthlyCharges'], df['TotalCharges'])\n",
+    "print(\"Corrélation de Pearson entre MonthlyCharges et TotalCharges : \", pearson_corr)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### <font color=\"yellow\">! Test khi-deux => H0 : l’hypothèse nulle est : « les deux variables testées sont indépendantes » ( si p-value < 5% on rejette H0)</font>"
    ]
   },
