nb service internet

--- a/src/03_feature_engineering.ipynb
+++ b/src/03_feature_engineering.ipynb
@@ -244,13 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_nb_service_column(df):\n",
-    "    services = ['PhoneService', 'OnlineSecurity', 'OnlineBackup', \n",
-    "                'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies']\n",
+    "    services = ['OnlineSecurity', 'OnlineBackup','DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies']\n",
     "    df['nb-service'] = df[services].apply(lambda x: x.eq('Yes').sum(), axis=1)\n",
     "    df = df.drop(columns=services)\n",
     "    return df"
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,6 +286,7 @@
        "      <th>Partner</th>\n",
        "      <th>Dependents</th>\n",
        "      <th>tenure</th>\n",
+       "      <th>PhoneService</th>\n",
        "      <th>MultipleLines</th>\n",
        "      <th>InternetService</th>\n",
        "      <th>Contract</th>\n",
@@ -306,6 +306,7 @@
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>1</td>\n",
+       "      <td>No</td>\n",
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Month-to-month</td>\n",
@@ -323,6 +324,7 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>34</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>One year</td>\n",
@@ -331,7 +333,7 @@
        "      <td>56.95</td>\n",
        "      <td>1889.50</td>\n",
        "      <td>No</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -340,6 +342,7 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Month-to-month</td>\n",
@@ -348,7 +351,7 @@
        "      <td>53.85</td>\n",
        "      <td>108.15</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -357,6 +360,7 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>45</td>\n",
+       "      <td>No</td>\n",
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>One year</td>\n",
@@ -374,6 +378,7 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
        "      <td>Month-to-month</td>\n",
@@ -382,36 +387,36 @@
        "      <td>70.70</td>\n",
        "      <td>151.65</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   gender SeniorCitizen Partner Dependents  tenure     MultipleLines  \\\n",
-       "0  Female            No     Yes         No       1  No phone service   \n",
-       "1    Male            No      No         No      34                No   \n",
-       "2    Male            No      No         No       2                No   \n",
-       "3    Male            No      No         No      45  No phone service   \n",
-       "4  Female            No      No         No       2                No   \n",
+       "   gender SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+       "0  Female            No     Yes         No       1           No   \n",
+       "1    Male            No      No         No      34          Yes   \n",
+       "2    Male            No      No         No       2          Yes   \n",
+       "3    Male            No      No         No      45           No   \n",
+       "4  Female            No      No         No       2          Yes   \n",
        "\n",
-       "  InternetService        Contract PaperlessBilling              PaymentMethod  \\\n",
-       "0             DSL  Month-to-month              Yes           Electronic check   \n",
-       "1             DSL        One year               No               Mailed check   \n",
-       "2             DSL  Month-to-month              Yes               Mailed check   \n",
-       "3             DSL        One year               No  Bank transfer (automatic)   \n",
-       "4     Fiber optic  Month-to-month              Yes           Electronic check   \n",
+       "      MultipleLines InternetService        Contract PaperlessBilling  \\\n",
+       "0  No phone service             DSL  Month-to-month              Yes   \n",
+       "1                No             DSL        One year               No   \n",
+       "2                No             DSL  Month-to-month              Yes   \n",
+       "3  No phone service             DSL        One year               No   \n",
+       "4                No     Fiber optic  Month-to-month              Yes   \n",
        "\n",
-       "   MonthlyCharges  TotalCharges Churn  nb-service  \n",
-       "0           29.85         29.85    No           1  \n",
-       "1           56.95       1889.50    No           3  \n",
-       "2           53.85        108.15   Yes           3  \n",
-       "3           42.30       1840.75    No           3  \n",
-       "4           70.70        151.65   Yes           1  "
+       "               PaymentMethod  MonthlyCharges  TotalCharges Churn  nb-service  \n",
+       "0           Electronic check           29.85         29.85    No           1  \n",
+       "1               Mailed check           56.95       1889.50    No           2  \n",
+       "2               Mailed check           53.85        108.15   Yes           2  \n",
+       "3  Bank transfer (automatic)           42.30       1840.75    No           3  \n",
+       "4           Electronic check           70.70        151.65   Yes           0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,6 +424,16 @@
    "source": [
     "df = add_nb_service_column(df)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#EXporter la data dans un Csv \n",
+    "df.to_csv('../data/gold.csv', index=False)"
    ]
   }
  ],
