--- a/src/01_cleaning.ipynb
+++ b/src/01_cleaning.ipynb
@@ -1325,111 +1325,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tenure</th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>7021.000000</td>\n",
-       "      <td>7021.000000</td>\n",
-       "      <td>7021.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>32.469449</td>\n",
-       "      <td>64.851894</td>\n",
-       "      <td>2288.963146</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>24.534965</td>\n",
-       "      <td>30.069001</td>\n",
-       "      <td>2265.316052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>18.250000</td>\n",
-       "      <td>18.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>35.750000</td>\n",
-       "      <td>411.150000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>70.400000</td>\n",
-       "      <td>1403.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>89.900000</td>\n",
-       "      <td>3801.700000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>72.000000</td>\n",
-       "      <td>118.750000</td>\n",
-       "      <td>8684.800000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            tenure  MonthlyCharges  TotalCharges\n",
-       "count  7021.000000     7021.000000   7021.000000\n",
-       "mean     32.469449       64.851894   2288.963146\n",
-       "std      24.534965       30.069001   2265.316052\n",
-       "min       0.000000       18.250000     18.800000\n",
-       "25%       9.000000       35.750000    411.150000\n",
-       "50%      29.000000       70.400000   1403.000000\n",
-       "75%      55.000000       89.900000   3801.700000\n",
-       "max      72.000000      118.750000   8684.800000"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -1453,6 +1348,14 @@
     "    axs[i].set_title(variable)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On constate une abscence des valeurs abberrantes"
    ]
   },
   {
