ridge and Lasoo models

--- a/Analysis & Modeling/03_feature_engineering.ipynb
+++ b/Analysis & Modeling/03_feature_engineering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4   Yes  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,20 +244,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_nb_service_column(df):\n",
-    "    services = ['OnlineSecurity', 'OnlineBackup','DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies']\n",
-    "    df['nb-service'] = df[services].apply(lambda x: x.eq('Yes').sum(), axis=1)\n",
-    "    df = df.drop(columns=services)\n",
-    "    return df"
+    "\n",
+    "internet_services_columns = ['OnlineSecurity', 'OnlineBackup','DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies']\n",
+    "df['nb-service'] = df[internet_services_columns].apply(lambda x: x == 'Yes').sum(axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender              0\n",
+       "SeniorCitizen       0\n",
+       "Partner             0\n",
+       "Dependents          0\n",
+       "tenure              0\n",
+       "PhoneService        0\n",
+       "MultipleLines       0\n",
+       "InternetService     0\n",
+       "OnlineSecurity      0\n",
+       "OnlineBackup        0\n",
+       "DeviceProtection    0\n",
+       "TechSupport         0\n",
+       "StreamingTV         0\n",
+       "StreamingMovies     0\n",
+       "Contract            0\n",
+       "PaperlessBilling    0\n",
+       "PaymentMethod       0\n",
+       "MonthlyCharges      0\n",
+       "TotalCharges        0\n",
+       "Churn               0\n",
+       "nb-service          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -289,6 +328,12 @@
        "      <th>PhoneService</th>\n",
        "      <th>MultipleLines</th>\n",
        "      <th>InternetService</th>\n",
+       "      <th>OnlineSecurity</th>\n",
+       "      <th>OnlineBackup</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TechSupport</th>\n",
+       "      <th>StreamingTV</th>\n",
+       "      <th>StreamingMovies</th>\n",
        "      <th>Contract</th>\n",
        "      <th>PaperlessBilling</th>\n",
        "      <th>PaymentMethod</th>\n",
@@ -309,6 +354,12 @@
        "      <td>No</td>\n",
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>Month-to-month</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Electronic check</td>\n",
@@ -327,6 +378,12 @@
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>One year</td>\n",
        "      <td>No</td>\n",
        "      <td>Mailed check</td>\n",
@@ -345,6 +402,12 @@
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>Month-to-month</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Mailed check</td>\n",
@@ -363,6 +426,12 @@
        "      <td>No</td>\n",
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>One year</td>\n",
        "      <td>No</td>\n",
        "      <td>Bank transfer (automatic)</td>\n",
@@ -381,6 +450,12 @@
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>Month-to-month</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Electronic check</td>\n",
@@ -391,6 +466,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -401,34 +477,73 @@
        "3    Male            No      No         No      45           No   \n",
        "4  Female            No      No         No       2          Yes   \n",
        "\n",
-       "      MultipleLines InternetService        Contract PaperlessBilling  \\\n",
-       "0  No phone service             DSL  Month-to-month              Yes   \n",
-       "1                No             DSL        One year               No   \n",
-       "2                No             DSL  Month-to-month              Yes   \n",
-       "3  No phone service             DSL        One year               No   \n",
-       "4                No     Fiber optic  Month-to-month              Yes   \n",
+       "      MultipleLines InternetService OnlineSecurity OnlineBackup  ...  \\\n",
+       "0  No phone service             DSL             No          Yes  ...   \n",
+       "1                No             DSL            Yes           No  ...   \n",
+       "2                No             DSL            Yes          Yes  ...   \n",
+       "3  No phone service             DSL            Yes           No  ...   \n",
+       "4                No     Fiber optic             No           No  ...   \n",
        "\n",
-       "               PaymentMethod  MonthlyCharges  TotalCharges Churn  nb-service  \n",
-       "0           Electronic check           29.85         29.85    No           1  \n",
-       "1               Mailed check           56.95       1889.50    No           2  \n",
-       "2               Mailed check           53.85        108.15   Yes           2  \n",
-       "3  Bank transfer (automatic)           42.30       1840.75    No           3  \n",
-       "4           Electronic check           70.70        151.65   Yes           0  "
+       "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
+       "0          No          No              No  Month-to-month              Yes   \n",
+       "1          No          No              No        One year               No   \n",
+       "2          No          No              No  Month-to-month              Yes   \n",
+       "3         Yes          No              No        One year               No   \n",
+       "4          No          No              No  Month-to-month              Yes   \n",
+       "\n",
+       "               PaymentMethod MonthlyCharges  TotalCharges  Churn nb-service  \n",
+       "0           Electronic check          29.85         29.85     No          1  \n",
+       "1               Mailed check          56.95       1889.50     No          2  \n",
+       "2               Mailed check          53.85        108.15    Yes          2  \n",
+       "3  Bank transfer (automatic)          42.30       1840.75     No          3  \n",
+       "4           Electronic check          70.70        151.65    Yes          0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = add_nb_service_column(df)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1\n",
+       "1       2\n",
+       "2       2\n",
+       "3       3\n",
+       "4       0\n",
+       "       ..\n",
+       "7038    5\n",
+       "7039    4\n",
+       "7040    1\n",
+       "7041    0\n",
+       "7042    5\n",
+       "Name: nb-service, Length: 7043, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['nb-service']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
