--- a/Analysis & Modeling/ Régularisation_Ridge.ipynb
+++ b/Analysis & Modeling/ Régularisation_Ridge.ipynb
@@ -630,6 +630,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#l'échelle sur l'axe y a été réduite à -105 à +105. Nous avons donc une grande réduction de l'amplitude de nos coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 185,
    "metadata": {},
    "outputs": [
