--- a/Analysis & Modeling/Régularisation_Lasso.ipynb
+++ b/Analysis & Modeling/Régularisation_Lasso.ipynb
@@ -610,6 +610,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <font color=\"yellow\"> La régression Lasso a l'avantage d'éliminer les caractéristiques qui ont une faible performance. : </font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 357,
    "metadata": {},
@@ -815,6 +823,14 @@
     "    \n",
     "    # Plot coefficients\n",
     "    plotCoefs(model_rcv.coef_, feature_names, f\"Ridge Coefficients (alpha={alpha})\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La régression Ridge et la régression Lasso ont des manières légèrement différentes de réaliser cela, et la régression Lasso a l'avantage d'éliminer les caractéristiques qui ont une faible performance."
    ]
   }
  ],
