--- a/Analysis & Modeling/naive_modelLog.ipynb
+++ b/Analysis & Modeling/naive_modelLog.ipynb
@@ -469,16 +469,10 @@
     "    # Log the baseline model to MLflow\n",
     "    pipe.fit(X_train, y_train)\n",
     "    \n",
-    "\n",
-    "    \n",
-    "    mlflow.sklearn.log_model(pipe, \"naive_model\")\n",
+    "    mlflow.sklearn.log_model(pipe, \"naive_model\")in range(0, 5, 1)\n",
     "\n",
     "    \n",
     "    model_uri = mlflow.get_artifact_uri(\"naive_model\")\n",
-    "\n",
-    "    # Log des paramètres\n",
-    "\n",
-    "   # mlflow.log_param(\"C\",0.8)\n",
     "\n",
     "    # Log des Tags\n",
     "    mlflow.set_tag(\"model\",\"logistic_regression\")\n",
